--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
           <p>438 777-1501</p>
           <p><a href="mailto:info@avantagejmr.com">info@avantagejmr.com</a></p>
         </div>
-        <form action="https://formspree.io/f/mvgplepr" method="post">
+        <form
+          id="contact-form"
+          action="https://formspree.io/f/mvgplepr"
+          method="post"
+        >
           <input type="text" name="_honeypot" style="display: none" />
 
           <div class="form-group">
@@ -253,24 +257,24 @@
           }
 
           galleryContainer.innerHTML = `
-        <div class="gallery-content">
-            <span class="gallery-close">&times;</span>
-            <div class="gallery-scroll">
-                ${galleryImages
-                  .map(
-                    (image) => `
-                    <div class="gallery-slide">
-                        <img src="${image.src}" alt="">
-                        <div class="gallery-subtext">${image.subtext}</div>
+                <div class="gallery-content">
+                    <span class="gallery-close">&times;</span>
+                    <div class="gallery-scroll">
+                        ${galleryImages
+                          .map(
+                            (image) => `
+                                <div class="gallery-slide">
+                                    <img src="${image.src}" alt="">
+                                    <div class="gallery-subtext">${image.subtext}</div>
+                                </div>
+                            `
+                          )
+                          .join("")}
                     </div>
-                `
-                  )
-                  .join("")}
-            </div>
-            <button class="gallery-prev">&lt;</button>
-            <button class="gallery-next">&gt;</button>
-        </div>
-    `;
+                    <button class="gallery-prev">&lt;</button>
+                    <button class="gallery-next">&gt;</button>
+                </div>
+            `;
 
           const galleryScroll =
             galleryContainer.querySelector(".gallery-scroll");
@@ -356,88 +360,89 @@
       // Add CSS for the popup gallery
       const style = document.createElement("style");
       style.textContent = `
-.gallery-popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 10000;
-}
+            .gallery-popup {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.8);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                z-index: 10000;
+            }
 
-.gallery-content {
-    position: relative;
-    max-width: 90%;
-    max-height: 90%;
-    text-align: center;
-    overflow: hidden;
-}
+            .gallery-content {
+                position: relative;
+                max-width: 90%;
+                max-height: 90%;
+                text-align: center;
+                overflow: hidden;
+            }
 
-.gallery-scroll {
-    display: flex;
-    transition: transform 0.5s ease;
-    scrollbar-width: none; /* Hide scrollbar for Firefox */
-}
+            .gallery-scroll {
+                display: flex;
+                transition: transform 0.5s ease;
+                scrollbar-width: none; /* Hide scrollbar for Firefox */
+            }
 
-.gallery-scroll::-webkit-scrollbar {
-    display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
-}
+            .gallery-scroll::-webkit-scrollbar {
+                display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
+            }
 
-.gallery-slide {
-    flex: 0 0 100%; /* Each slide takes full width */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
+            .gallery-slide {
+                flex: 0 0 100%; /* Each slide takes full width */
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
 
-.gallery-slide img {
-    max-width: 100%;
-    max-height: 80vh;
-    border-radius: 8px;
-}
+            .gallery-slide img {
+                max-width: 100%;
+                max-height: 80vh;
+                border-radius: 8px;
+            }
 
-.gallery-subtext {
-    color: white;
-    margin-top: 10px;
-}
+            .gallery-subtext {
+                color: white;
+                margin-top: 10px;
+            }
 
-.gallery-close {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    font-size: 30px;
-    color: white;
-    cursor: pointer;
-    z-index: 10001; /* Ensure the close button is above other elements */
-}
+            .gallery-close {
+                position: absolute;
+                top: 10px;
+                right: 20px;
+                font-size: 30px;
+                color: white;
+                cursor: pointer;
+                z-index: 10001; /* Ensure the close button is above other elements */
+            }
 
-.gallery-prev,
-.gallery-next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(255, 255, 255, 0.5);
-    border: none;
-    font-size: 24px;
-    cursor: pointer;
-    z-index: 10001;
-}
+            .gallery-prev,
+            .gallery-next {
+                position: absolute;
+                top: 50%;
+                transform: translateY(-50%);
+                background-color: rgba(255, 255, 255, 0.5);
+                border: none;
+                font-size: 24px;
+                cursor: pointer;
+                z-index: 10001;
+            }
 
-.gallery-prev {
-    left: 10px;
-}
+            .gallery-prev {
+                left: 10px;
+            }
 
-.gallery-next {
-    right: 10px;
-}
-`;
+            .gallery-next {
+                right: 10px;
+            }
+        `;
       document.head.appendChild(style);
     </script>
+
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         // Hamburger Menu Toggle
@@ -487,6 +492,7 @@
           });
         });
       });
+
       document.addEventListener("DOMContentLoaded", () => {
         const cookieConsentBar = document.getElementById("cookie-consent-bar");
         const acceptCookiesButton = document.getElementById("accept-cookies");
@@ -502,6 +508,7 @@
           cookieConsentBar.style.display = "none"; // Hide the consent bar
         });
       });
+
       document
         .getElementById("contact-form")
         .addEventListener("submit", function (e) {
