--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 
 <head>
 
-    <script
-        src="https://www.google.com/recaptcha/enterprise.js?render=6Lc-qjMqAAAAADMOgRKDp95GOv-imaJWH__CE4uP"></script>
-
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Avantage Construction</title>
@@ -128,8 +126,9 @@
                     <label for="message">Message</label>
                     <textarea id="message" name="message" rows="5" required></textarea>
                 </div>
-                <div class="g-recaptcha" data-sitekey="6Lc-qjMqAAAAADMOgRKDp95GOv-imaJWH__CE4uP"></div>
-
+                <center>
+                    <div class="g-recaptcha" data-sitekey="6Lc-qjMqAAAAADMOgRKDp95GOv-imaJWH__CE4uP"></div>
+                </center>
                 <button type="submit">Soumettre</button>
             </form>
 
