--- a/index.html
+++ b/index.html
@@ -126,9 +126,6 @@
                     <label for="message">Message</label>
                     <textarea id="message" name="message" rows="5" required></textarea>
                 </div>
-                <center>
-                    <div class="g-recaptcha" data-sitekey="6Lc-qjMqAAAAADMOgRKDp95GOv-imaJWH__CE4uP"></div>
-                </center>
                 <button type="submit">Soumettre</button>
             </form>
 
@@ -229,10 +226,13 @@
                         galleryImages = [
                             {
                                 src: "/img/residential1.webp",
-                                subtext: "Living room renovation",
+                                subtext: "RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine",
                             },
-                            { src: "/img/residential2.webp", subtext: "Kitchen makeover" },
+                            { src: "/img/residential2.webp", subtext: "RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine" },
+                            { src: "/img/residential3.webp", subtext: "RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine" },
+                            { src: "/img/residential4.webp", subtext: "RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine" },
                         ];
+
                         break;
                     case "commercial":
                         galleryImages = [
