--- a/index.html
+++ b/index.html
@@ -231,6 +231,11 @@
                             { src: "/img/residential2.webp", subtext: "RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine" },
                             { src: "/img/residential3.webp", subtext: "RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine" },
                             { src: "/img/residential4.webp", subtext: "RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine" },
+                            { src: "/img/residential5.webp", subtext: "RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine" },
+                            { src: "/img/residential6.webp", subtext: "RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine" },
+                            { src: "/img/residential7.webp", subtext: "RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine" },
+                            { src: "/img/residential8.webp", subtext: "RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine" },
+                            { src: "/img/residential9.webp", subtext: "RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine" },
                         ];
 
                         break;
