--- a/index.html
+++ b/index.html
@@ -236,6 +236,11 @@
                             { src: "/img/residential7.webp", subtext: "RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine" },
                             { src: "/img/residential8.webp", subtext: "RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine" },
                             { src: "/img/residential9.webp", subtext: "RÉNOVATION ROSEMONT ➣ entrée, salon et cuisine" },
+                            { src: "/img/residential10.webp", subtext: "Rénovation Notre-Dame-de-Grâce ➣ cuisine" },
+                            { src: "/img/residential11.webp", subtext: "Rénovation Notre-Dame-de-Grâce ➣ cuisine" },
+                            { src: "/img/residential12.webp", subtext: "Rénovation Notre-Dame-de-Grâce ➣ cuisine" },
+                            { src: "/img/residential13.webp", subtext: "Rénovation Notre-Dame-de-Grâce ➣ cuisine" },
+                            { src: "/img/residential14.webp", subtext: "Rénovation Notre-Dame-de-Grâce ➣ cuisine" },
                         ];
 
                         break;
