--- a/index.html
+++ b/index.html
@@ -241,6 +241,12 @@
                             { src: "/img/residential12.webp", subtext: "Rénovation Notre-Dame-de-Grâce ➣ cuisine" },
                             { src: "/img/residential13.webp", subtext: "Rénovation Notre-Dame-de-Grâce ➣ cuisine" },
                             { src: "/img/residential14.webp", subtext: "Rénovation Notre-Dame-de-Grâce ➣ cuisine" },
+                            { src: "/img/residential15.webp", subtext: "Rénovation Brossard ➣ Cuisine et Salle de bain" },
+                            { src: "/img/residential16.webp", subtext: "Rénovation Brossard ➣ Cuisine et Salle de bain" },
+                            { src: "/img/residential17.webp", subtext: "Rénovation Brossard ➣ Cuisine et Salle de bain" },
+                            { src: "/img/residential18.webp", subtext: "Rénovation Brossard ➣ Cuisine et Salle de bain" },
+                            { src: "/img/residential19.webp", subtext: "Rénovation Brossard ➣ Cuisine et Salle de bain" },
+                            { src: "/img/residential20.webp", subtext: "Rénovation Brossard ➣ Cuisine et Salle de bain" },
                         ];
 
                         break;
