--- a/index.html
+++ b/index.html
@@ -247,6 +247,12 @@
                             { src: "/img/residential18.webp", subtext: "Rénovation Brossard ➣ Cuisine et Salle de bain" },
                             { src: "/img/residential19.webp", subtext: "Rénovation Brossard ➣ Cuisine et Salle de bain" },
                             { src: "/img/residential20.webp", subtext: "Rénovation Brossard ➣ Cuisine et Salle de bain" },
+                            { src: "/img/residential21.webp", subtext: "Rénovation Brossard ➣ Sous-sol" },
+                            { src: "/img/residential22.webp", subtext: "Rénovation Brossard ➣ Sous-sol" },
+                            { src: "/img/residential23.webp", subtext: "Rénovation Brossard ➣ Sous-sol" },
+                            { src: "/img/residential24.webp", subtext: "Rénovation Brossard ➣ Sous-sol" },
+                            { src: "/img/residential25.webp", subtext: "Rénovation Brossard ➣ Sous-sol" },
+                            { src: "/img/residential26.webp", subtext: "Rénovation Brossard ➣ Sous-sol" },
                         ];
 
                         break;
