--- a/index.html
+++ b/index.html
@@ -259,13 +259,17 @@
                     case "commercial":
                         galleryImages = [
                             {
-                                src: "/img/commercial1.jpg",
-                                subtext: "Office space redesign",
+                                src: "/img/commercial1.webp",
+                                subtext: "Studio de Yoga, rue Molson à Montréal",
                             },
                             {
-                                src: "/img/commercial2.jpg",
-                                subtext: "Retail store interior",
+                                src: "/img/commercial2.webp",
+                                subtext: "Studio de Yoga, rue Molson à Montréal",
                             },
+                            { src: "/img/commercial3.webp", subtext: "Studio de Yoga, rue Molson à Montréal" },
+                            { src: "/img/commercial4.webp", subtext: "Studio de Yoga, rue Molson à Montréal" },
+                            { src: "/img/commercial5.webp", subtext: "Studio de Yoga, rue Molson à Montréal" },
+
                         ];
                         break;
                     case "other":
