--- a/index.html
+++ b/index.html
@@ -268,6 +268,18 @@
                             { src: "/img/commercial3.webp", subtext: "Studio de Yoga, rue Molson à Montréal" },
                             { src: "/img/commercial4.webp", subtext: "Studio de Yoga, rue Molson à Montréal" },
                             { src: "/img/commercial5.webp", subtext: "Studio de Yoga, rue Molson à Montréal" },
+                            { src: "/img/commercial6.webp", subtext: "Académie Frontenac à Montréal" },
+                            { src: "/img/commercial7.webp", subtext: "Académie Frontenac à Montréal" },
+                            { src: "/img/commercial8.webp", subtext: "Académie Frontenac à Montréal" },
+                            { src: "/img/commercial9.webp", subtext: "Académie Frontenac à Montréal" },
+                            { src: "/img/commercial10.webp", subtext: "Académie Frontenac à Montréal" },
+                            { src: "/img/commercial11.webp", subtext: "Académie Frontenac à Montréal" },
+                            { src: "/img/commercial12.webp", subtext: "Cascades Récupération + à Lachine" },
+                            { src: "/img/commercial13.webp", subtext: "Cascades Récupération + à Lachine" },
+                            { src: "/img/commercial14.webp", subtext: "Cascades Récupération + à Lachine" },
+                            { src: "/img/commercial15.webp", subtext: "Cascades Récupération + à Lachine" },
+                            { src: "/img/commercial16.webp", subtext: "Cascades Récupération + à Lachine" },
+                            { src: "/img/commercial17.webp", subtext: "Cascades Récupération + à Lachine" },
 
                         ];
                         break;
