--- a/index.html
+++ b/index.html
@@ -280,6 +280,13 @@
                             { src: "/img/commercial15.webp", subtext: "Cascades Récupération + à Lachine" },
                             { src: "/img/commercial16.webp", subtext: "Cascades Récupération + à Lachine" },
                             { src: "/img/commercial17.webp", subtext: "Cascades Récupération + à Lachine" },
+                            { src: "/img/commercial17.webp", subtext: "Servier Canada" },
+                            { src: "/img/commercial18.webp", subtext: "Servier Canada" },
+                            { src: "/img/commercial19.webp", subtext: "Servier Canada" },
+                            { src: "/img/commercial20.webp", subtext: "Servier Canada" },
+                            { src: "/img/commercial21.webp", subtext: "Servier Canada" },
+                            { src: "/img/commercial22.webp", subtext: "Servier Canada" },
+                            { src: "/img/commercial23.webp", subtext: "Servier Canada" },
 
                         ];
                         break;
