--- a/index.html
+++ b/index.html
@@ -280,7 +280,6 @@
                             { src: "/img/commercial15.webp", subtext: "Cascades Récupération + à Lachine" },
                             { src: "/img/commercial16.webp", subtext: "Cascades Récupération + à Lachine" },
                             { src: "/img/commercial17.webp", subtext: "Cascades Récupération + à Lachine" },
-                            { src: "/img/commercial17.webp", subtext: "Servier Canada" },
                             { src: "/img/commercial18.webp", subtext: "Servier Canada" },
                             { src: "/img/commercial19.webp", subtext: "Servier Canada" },
                             { src: "/img/commercial20.webp", subtext: "Servier Canada" },
@@ -292,8 +291,12 @@
                         break;
                     case "other":
                         galleryImages = [
-                            { src: "/img/other1.jpg", subtext: "Custom outdoor deck" },
-                            { src: "/img/other2.jpg", subtext: "Bathroom tiling" },
+                            { src: "/img/autres1.webp", subtext: "Vanités sur mesure" },
+                            { src: "/img/autres2.webp", subtext: "Vanités sur mesure" },
+                            { src: "/img/autres3.webp", subtext: "Rénovation salle de bain" },
+                            { src: "/img/autres4.webp", subtext: "Rénovation salle de bain" },
+                            { src: "/img/autres5.webp", subtext: "Installation de planchers chauffants" },
+                            { src: "/img/autres6.webp", subtext: "Installation de planchers chauffants" },
                         ];
                         break;
                 }
