--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="logo">
                 <a href="#home">
-                    <img src="/img/logo.jpg" alt="ConstructionCo Logo" />
+                    <img src="/img/logo.webp" alt="ConstructionCo Logo" />
                 </a>
             </div>
             <div class="menu-icon">
@@ -91,7 +91,7 @@
                     <p>Président</p>
                 </div>
                 <div class="about-image">
-                    <img src="/img/mission.jpg" alt="Our Mission" />
+                    <img src="/img/mission.webp" alt="Our Mission" />
                 </div>
             </div>
         </div>
