--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Avantage Construction</title>
+    <title>Avantage Construction - Jean-Marc Roy, Entrepreneur général</title>
     <link rel="stylesheet" href="styles.css" />
     <link
         href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Merriweather:wght@400;700&display=swap"
