--- a/pharmacien/index.html
+++ b/pharmacien/index.html
@@ -32,6 +32,12 @@
             color: #155d38;
         }
 
+        .calendar-nav {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        }
+
         .calendar {
             display: flex;
             flex-wrap: wrap;
@@ -42,16 +48,17 @@
             padding: 20px;
             box-sizing: border-box;
             text-align: center;
-            cursor: pointer;
             margin-bottom: 10px;
         }
 
         .available {
             background-color: #e0ffe0;
+            cursor: pointer;
         }
 
         .booked {
             background-color: #ffe0e0;
+            cursor: not-allowed;
         }
 
         form {
@@ -64,6 +71,8 @@
         }
 
         input[type="email"],
+        input[type="text"],
+        input[type="tel"],
         input[type="submit"] {
             width: 100%;
             padding: 10px;
@@ -86,39 +95,87 @@
     </header>
     <div class="container">
         <h2>Calendrier de disponibilité</h2>
-        <div class="calendar">
-            <div class="day available">1</div>
-            <div class="day booked">2</div>
-            <div class="day available">3</div>
-            <!-- Repeat for each day of the month -->
+        <div class="calendar-nav">
+            <button id="prevMonth">Mois Précédent</button>
+            <span id="monthYear"></span>
+            <button id="nextMonth">Mois Suivant</button>
         </div>
+        <div class="calendar" id="calendar"></div>
 
-        <form id="bookingForm">
+        <form id="bookingForm" action="https://formspree.io/f/your-form-id" method="POST">
             <label for="email">Votre adresse e-mail:</label>
             <input type="email" id="email" name="email" required>
+            <label for="location">Lieu de la pharmacie:</label>
+            <input type="text" id="location" name="location" required>
+            <label for="phone">Numéro de téléphone:</label>
+            <input type="tel" id="phone" name="phone" required>
+            <label for="schedule">Horaire désiré:</label>
+            <input type="text" id="schedule" name="schedule" required>
             <input type="hidden" id="selectedDay" name="selectedDay">
             <input type="submit" value="Réserver">
         </form>
     </div>
 
     <script>
-        const availableDays = document.querySelectorAll('.day.available');
+        const calendar = document.getElementById('calendar');
+        const monthYear = document.getElementById('monthYear');
+        const prevMonthBtn = document.getElementById('prevMonth');
+        const nextMonthBtn = document.getElementById('nextMonth');
         const bookingForm = document.getElementById('bookingForm');
         const selectedDayInput = document.getElementById('selectedDay');
 
-        availableDays.forEach(day => {
-            day.addEventListener('click', function () {
-                availableDays.forEach(d => d.style.border = 'none');
-                this.style.border = '2px solid #155d38';
-                selectedDayInput.value = this.textContent;
-            });
+        let currentDate = new Date();
+
+        function renderCalendar(date) {
+            const year = date.getFullYear();
+            const month = date.getMonth();
+            const firstDay = new Date(year, month, 1).getDay();
+            const lastDate = new Date(year, month + 1, 0).getDate();
+            calendar.innerHTML = '';
+            monthYear.textContent = date.toLocaleString('fr-FR', { month: 'long', year: 'numeric' });
+
+            for (let i = 0; i < firstDay; i++) {
+                const emptyDiv = document.createElement('div');
+                emptyDiv.classList.add('day');
+                calendar.appendChild(emptyDiv);
+            }
+
+            for (let day = 1; day <= lastDate; day++) {
+                const dayDiv = document.createElement('div');
+                dayDiv.classList.add('day', 'booked'); // All days are booked initially
+                dayDiv.textContent = day;
+
+                dayDiv.addEventListener('click', function () {
+                    if (!this.classList.contains('booked')) {
+                        const availableDays = document.querySelectorAll('.day.available');
+                        availableDays.forEach(d => d.style.border = 'none');
+                        this.style.border = '2px solid #155d38';
+                        selectedDayInput.value = `${day}/${month + 1}/${year}`;
+                    }
+                });
+
+                calendar.appendChild(dayDiv);
+            }
+        }
+
+        prevMonthBtn.addEventListener('click', function () {
+            currentDate.setMonth(currentDate.getMonth() - 1);
+            renderCalendar(currentDate);
+        });
+
+        nextMonthBtn.addEventListener('click', function () {
+            currentDate.setMonth(currentDate.getMonth() + 1);
+            renderCalendar(currentDate);
         });
 
         bookingForm.addEventListener('submit', function (event) {
-            event.preventDefault();
-            alert('Votre demande a été envoyée pour le jour: ' + selectedDayInput.value);
-            // Here, you would send the data to your backend or database
+            if (!selectedDayInput.value) {
+                event.preventDefault();
+                alert('Veuillez sélectionner un jour disponible.');
+            }
         });
+
+        renderCalendar(currentDate);
     </script>
 </body>
 
